# tunefusion

./: .gitignore  AGENT_GUIDELINES.md  CHANGELOG.md  Cargo.toml  README.md  test_demucs_detection.sh
apps/desktop/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/game/: GameRenderer.tsx  GameScreen.tsx  LeaderboardView.tsx  ModeSelector.tsx  PlayerSelector.tsx  ResultsScreen.tsx  VersusScreen.tsx  index.ts
apps/desktop/src/components/game/effects/: HitFeedback.tsx  ParticleBurst.tsx  StreakFire.tsx  index.ts
apps/desktop/src/hooks/: useGameLoop.ts
apps/desktop/src/stores/: gameStore.ts
apps/desktop/src/utils/: pitchMath.ts
crates/analysis/: Cargo.toml  README.md
crates/analysis/src/: lib.rs  midi_import.rs  pitch_contour.rs  vocal_isolation.rs  waveform.rs
crates/audio_engine/: Cargo.toml  README.md
crates/audio_engine/src/: lib.rs
crates/game_engine/: Cargo.toml
crates/game_engine/src/: audio_player.rs  lib.rs  mic_capture.rs  pitch_detector.rs  scoring.rs
docs/: AI_HANDOFF.md  ARCHITECTURE.md  DATA_MODEL.md  DEV_NOTES.md  GUARDRAILS.md  REQUIREMENTS.md  ROADMAP.md  TASK_PROTOCOL.md
docs/adr/: 0000-template.md  0001-desktop-first-architecture.md  0002-artifact-first-analysis.md  0003-local-first-storage.md  0004-persistence-strategy.md
