[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
audio_engine = { path = "../audio_engine" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
pyin = "1"
ndarray = "0.16"
midly = "0.5"  # MIDI file parsing

[dev-dependencies]
tempfile = "3"
hound = "3"
