[package]
name = "tunefusion-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
analysis = { path = "../../../crates/analysis" }
tauri = { version = "1", features = ["dialog-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
