[package]
name = "tunefusion-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
analysis = { path = "../../../crates/analysis" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
