[package]
name = "tunefusion-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
analysis = { path = "../../../crates/analysis" }
audio_engine = { path = "../../../crates/audio_engine" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
